<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tpc_mobile_joy_teleop</name>
  <version>1.0.0</version>
  <description>tm robot teleop for xbox joystick</description>
  <maintainer email="kdl79@tanhay.com">kdl</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>control_msgs</depend>
  <depend>std_srvs</depend>
  <depend>joy</depend>
  <depend>tpc_mobile_bringup</depend>
  <depend>tpc_mobile_description</depend>
  <depend>nav_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor_core</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
