<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tpc_mobile_mecanum_wheel_controll_node</name>
  <version>0.0.0</version>
  <description>TPC mobile arm robot mecanum wheel controll node package</description>
  <maintainer email="kdl79@tanhay.com">kdl</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>realtime_tools</depend>
  <depend>controller_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
